# sighlo

./: ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md
src/: entity.h  identifier.h  main.cpp  repl.h  serialize.h  table.h
